--- a/ForeScore.WebMVC/Views/Post/Delete.cshtml
+++ b/ForeScore.WebMVC/Views/Post/Delete.cshtml
@@ -58,10 +58,10 @@
                     <td>
                         Hole
                     </td>
-                    @for (int i = 0; i < Model.RoundDetail.CourseDetail.Holes.Count; i++)
+                    @for (int i = 0; i < Model.RoundDetail.CourseDetail.FrontNine.Count; i++)
                     {
                         <td>
-                            @Html.DisplayFor(model => Model.RoundDetail.CourseDetail.Holes[i].HoleNumber, new { htmlAttributes = new { @class = "form-control", } })
+                            @Html.DisplayFor(model => Model.RoundDetail.CourseDetail.FrontNine[i].HoleNumber, new { htmlAttributes = new { @class = "form-control", } })
                         </td>
                     }
                 </tr>
@@ -69,10 +69,10 @@
                     <td>
                         Par
                     </td>
-                    @for (int i = 0; i < Model.RoundDetail.CourseDetail.Holes.Count; i++)
+                    @for (int i = 0; i < Model.RoundDetail.CourseDetail.FrontNine.Count; i++)
                     {
                         <td>
-                            @Html.DisplayFor(model => Model.RoundDetail.CourseDetail.Holes[i].Par, new { htmlAttributes = new { @class = "form-control", } })
+                            @Html.DisplayFor(model => Model.RoundDetail.CourseDetail.FrontNine[i].Par, new { htmlAttributes = new { @class = "form-control", } })
                         </td>
                     }
                 </tr>
@@ -80,10 +80,10 @@
                     <td>
                         Distance (Yards)
                     </td>
-                    @for (int i = 0; i < Model.RoundDetail.CourseDetail.Holes.Count; i++)
+                    @for (int i = 0; i < Model.RoundDetail.CourseDetail.FrontNine.Count; i++)
                     {
                         <td>
-                            @Html.DisplayFor(model => Model.RoundDetail.CourseDetail.Holes[i].Distance, new { htmlAttributes = new { @class = "form-control", } })
+                            @Html.DisplayFor(model => Model.RoundDetail.CourseDetail.FrontNine[i].Distance, new { htmlAttributes = new { @class = "form-control", } })
                         </td>
                     }
                 </tr>
@@ -91,12 +91,12 @@
                     <td>
                         Score
                     </td>
-                    @for (int i = 0; i < Model.RoundDetail.HoleData.Count; i++)
+                    @for (int i = 0; i < Model.RoundDetail.FrontNine.Count; i++)
                     {
 
                         <td>
-                            @Html.DisplayFor(model => Model.RoundDetail.HoleData[i].Score, new { htmlAttributes = new { @class = "form-control", } })
-                            @Html.HiddenFor(model => Model.RoundDetail.HoleData[i].HoleNumber, new { htmlAttributes = new { @class = "form-control", } })
+                            @Html.DisplayFor(model => Model.RoundDetail.FrontNine[i].Score, new { htmlAttributes = new { @class = "form-control", } })
+                            @Html.HiddenFor(model => Model.RoundDetail.FrontNine[i].HoleNumber, new { htmlAttributes = new { @class = "form-control", } })
                         </td>
 
                     }
@@ -105,11 +105,11 @@
                     <td>
                         Driving Distance (Yards)
                     </td>
-                    @for (int i = 0; i < Model.RoundDetail.HoleData.Count; i++)
+                    @for (int i = 0; i < Model.RoundDetail.FrontNine.Count; i++)
                     {
 
                         <td>
-                            @Html.DisplayFor(model => Model.RoundDetail.HoleData[i].DrivingDistance, new { htmlAttributes = new { @class = "form-control", } })
+                            @Html.DisplayFor(model => Model.RoundDetail.FrontNine[i].DrivingDistance, new { htmlAttributes = new { @class = "form-control", } })
                         </td>
 
                     }
@@ -118,11 +118,11 @@
                     <td>
                         Putts
                     </td>
-                    @for (int i = 0; i < Model.RoundDetail.HoleData.Count; i++)
+                    @for (int i = 0; i < Model.RoundDetail.FrontNine.Count; i++)
                     {
 
                         <td>
-                            @Html.DisplayFor(model => Model.RoundDetail.HoleData[i].Putts, new { htmlAttributes = new { @class = "form-control", } })
+                            @Html.DisplayFor(model => Model.RoundDetail.FrontNine[i].Putts, new { htmlAttributes = new { @class = "form-control", } })
                         </td>
 
                     }
@@ -131,12 +131,12 @@
                     <td>
                         Fairway Hit
                     </td>
-                    @for (int i = 0; i < Model.RoundDetail.HoleData.Count; i++)
+                    @for (int i = 0; i < Model.RoundDetail.FrontNine.Count; i++)
                     {
 
                         <td>
-                            @Html.DisplayFor(model => Model.RoundDetail.HoleData[i].FairwayHit, new { htmlAttributes = new { @class = "form-control", } })
-                            @Html.DisplayFor(model => Model.RoundDetail.HoleData[i].FairwayHit, new { htmlAttributes = new { @class = "form-control", } })
+                            @Html.DisplayFor(model => Model.RoundDetail.FrontNine[i].FairwayHit, new { htmlAttributes = new { @class = "form-control", } })
+                            @Html.DisplayFor(model => Model.RoundDetail.FrontNine[i].FairwayHit, new { htmlAttributes = new { @class = "form-control", } })
                         </td>
 
                     }
@@ -145,12 +145,116 @@
                     <td>
                         Penalty(s)
                     </td>
-                    @for (int i = 0; i < Model.RoundDetail.HoleData.Count; i++)
+                    @for (int i = 0; i < Model.RoundDetail.FrontNine.Count; i++)
                     {
 
                         <td>
-                            @Html.DisplayFor(model => Model.RoundDetail.HoleData[i].Penalty, new { htmlAttributes = new { @class = "form-control", } })
-                            @Html.DisplayFor(model => Model.RoundDetail.HoleData[i].Penalty, new { htmlAttributes = new { @class = "form-control", } })
+                            @Html.DisplayFor(model => Model.RoundDetail.FrontNine[i].Penalty, new { htmlAttributes = new { @class = "form-control", } })
+                            @Html.DisplayFor(model => Model.RoundDetail.FrontNine[i].Penalty, new { htmlAttributes = new { @class = "form-control", } })
+                        </td>
+
+                    }
+                </tr>
+            </table>
+            <br />
+            <table class="table table-bordered">
+                <tr>
+                    <td>
+                        Hole
+                    </td>
+                    @for (int i = 0; i < Model.RoundDetail.CourseDetail.BackNine.Count; i++)
+                    {
+                        <td>
+                            @Html.DisplayFor(model => Model.RoundDetail.CourseDetail.BackNine[i].HoleNumber, new { htmlAttributes = new { @class = "form-control", } })
+                        </td>
+                    }
+                </tr>
+                <tr>
+                    <td>
+                        Par
+                    </td>
+                    @for (int i = 0; i < Model.RoundDetail.CourseDetail.BackNine.Count; i++)
+                    {
+                        <td>
+                            @Html.DisplayFor(model => Model.RoundDetail.CourseDetail.BackNine[i].Par, new { htmlAttributes = new { @class = "form-control", } })
+                        </td>
+                    }
+                </tr>
+                <tr>
+                    <td>
+                        Distance (Yards)
+                    </td>
+                    @for (int i = 0; i < Model.RoundDetail.CourseDetail.BackNine.Count; i++)
+                    {
+                        <td>
+                            @Html.DisplayFor(model => Model.RoundDetail.CourseDetail.BackNine[i].Distance, new { htmlAttributes = new { @class = "form-control", } })
+                        </td>
+                    }
+                </tr>
+                <tr>
+                    <td>
+                        Score
+                    </td>
+                    @for (int i = 0; i < Model.RoundDetail.BackNine.Count; i++)
+                    {
+
+                        <td>
+                            @Html.DisplayFor(model => Model.RoundDetail.BackNine[i].Score, new { htmlAttributes = new { @class = "form-control", } })
+                            @Html.HiddenFor(model => Model.RoundDetail.BackNine[i].HoleNumber, new { htmlAttributes = new { @class = "form-control", } })
+                        </td>
+
+                    }
+                </tr>
+                <tr>
+                    <td>
+                        Driving Distance (Yards)
+                    </td>
+                    @for (int i = 0; i < Model.RoundDetail.BackNine.Count; i++)
+                    {
+
+                        <td>
+                            @Html.DisplayFor(model => Model.RoundDetail.BackNine[i].DrivingDistance, new { htmlAttributes = new { @class = "form-control", } })
+                        </td>
+
+                    }
+                </tr>
+                <tr>
+                    <td>
+                        Putts
+                    </td>
+                    @for (int i = 0; i < Model.RoundDetail.BackNine.Count; i++)
+                    {
+
+                        <td>
+                            @Html.DisplayFor(model => Model.RoundDetail.BackNine[i].Putts, new { htmlAttributes = new { @class = "form-control", } })
+                        </td>
+
+                    }
+                </tr>
+                <tr>
+                    <td>
+                        Fairway Hit
+                    </td>
+                    @for (int i = 0; i < Model.RoundDetail.BackNine.Count; i++)
+                    {
+
+                        <td>
+                            @Html.DisplayFor(model => Model.RoundDetail.BackNine[i].FairwayHit, new { htmlAttributes = new { @class = "form-control", } })
+                            @Html.DisplayFor(model => Model.RoundDetail.BackNine[i].FairwayHit, new { htmlAttributes = new { @class = "form-control", } })
+                        </td>
+
+                    }
+                </tr>
+                <tr>
+                    <td>
+                        Penalty(s)
+                    </td>
+                    @for (int i = 0; i < Model.RoundDetail.BackNine.Count; i++)
+                    {
+
+                        <td>
+                            @Html.DisplayFor(model => Model.RoundDetail.BackNine[i].Penalty, new { htmlAttributes = new { @class = "form-control", } })
+                            @Html.DisplayFor(model => Model.RoundDetail.BackNine[i].Penalty, new { htmlAttributes = new { @class = "form-control", } })
                         </td>
 
                     }
@@ -158,7 +262,7 @@
             </table>
         </div>
     }
- 
+
 
 
 </div>
