--- a/ForeScore.WebMVC/Content/Site.css
+++ b/ForeScore.WebMVC/Content/Site.css
@@ -22,3 +22,18 @@ select,
 textarea {
     max-width: 280px;
 }
+
+.boxes .col-lg-12 .col-lg-6 {
+    padding-left: 0;
+    padding-right: 0;
+}
+
+.panel .panel-heading {
+    padding-left: 0;
+    padding-right: 0;
+}
+
+h2 {
+    color: blue;
+}
+
