--- a/ForeScore.WebMVC/Views/Course/Index.cshtml
+++ b/ForeScore.WebMVC/Views/Course/Index.cshtml
@@ -4,62 +4,82 @@
     ViewBag.Title = "Index";
 }
 
-<h2>Index</h2>
+<h2>Your Courses</h2>
 
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.Name)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Slope)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Rating)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Par)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.City)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.StateOfResidence)
-        </th>
+<div class="container">
+    <div class="panel-heading col-lg-3"></div>
+    <div class="panel-heading col-lg-6">
+        <a href="/Course/Create" class="btn btn-primary btn-block">
+            Add A New Course
+        </a>
+    </div>
+    <div class="panel-heading col-lg-3"></div>
 
-        <th></th>
-    </tr>
+    <div class="row col-lg-12">
+        <div class="panel panel-default">
+            <div class="panel-body panel-default ">
+                <table class="table table-bordered table-striped">
+                    <thead>
+                        <tr>
+                            <th scope="row">
+                                @Html.DisplayNameFor(model => model.Name)
+                            </th>
+                            <th scope="row">
+                                @Html.DisplayNameFor(model => model.Slope)
+                            </th>
+                            <th scope="row">
+                                @Html.DisplayNameFor(model => model.Rating)
+                            </th>
+                            <th scope="row">
+                                @Html.DisplayNameFor(model => model.Par)
+                            </th>
+                            <th scope="row">
+                                @Html.DisplayNameFor(model => model.City)
+                            </th>
+                            <th scope="row">
+                                @Html.DisplayNameFor(model => model.StateOfResidence)
+                            </th>
+                            <th scope="row"></th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        @foreach (var item in Model)
+                        {
+                            <tr>
+                                <td scope="row">
+                                    @Html.DisplayFor(modelItem => item.Name)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.Slope)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.Rating)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.Par)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.City)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.StateOfResidence)
+                                </td>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Name)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Slope)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Rating)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Par)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.City)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.StateOfResidence)
-        </td>
+                                <td>
+                                    @Html.ActionLink("Edit", "Edit", new { id = item.CourseId }) |
+                                    @Html.ActionLink("Details", "Details", new { id = item.CourseId }) |
+                                    @Html.ActionLink("Delete", "Delete", new { id = item.CourseId })
+                                </td>
+                            </tr>
+                        }
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </div>
+</div>
 
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id = item.CourseId }) |
-            @Html.ActionLink("Details", "Details", new { id = item.CourseId }) |
-            @Html.ActionLink("Delete", "Delete", new { id = item.CourseId })
-        </td>
-    </tr>
+@section Scripts {
+    @Scripts.Render("~/bundles/jqueryval")
 }
 
-</table>
