--- a/ForeScore.WebMVC/Views/Follow/Delete.cshtml
+++ b/ForeScore.WebMVC/Views/Follow/Delete.cshtml
@@ -27,13 +27,14 @@
             @Html.DisplayFor(model => model.FullName)
         </dd>
 
-            @Html.HiddenFor(model => model.UserId)
+        @Html.HiddenFor(model => model.UserId)
 
-            @Html.HiddenFor(model => model.FollowingId)
+        @Html.HiddenFor(model => model.FollowingId)
 
     </dl>
 
-    @using (Html.BeginForm()) {
+    @using (Html.BeginForm())
+    {
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
@@ -42,3 +43,7 @@
         </div>
     }
 </div>
+
+@section Scripts {
+    @Scripts.Render("~/bundles/jqueryval")
+}
