--- a/ForeScore.WebMVC/Views/Follow/Index.cshtml
+++ b/ForeScore.WebMVC/Views/Follow/Index.cshtml
@@ -7,6 +7,12 @@
 <h2>Index</h2>
 
 <div class="container">
+    <div class="panel-heading">
+        <a href="/Follow/Create" class="btn btn-primary btn-block">
+            Create New Follow
+        </a>
+    </div>
+
     <div class="row">
 
         <div class="col-lg-6">
@@ -69,11 +75,9 @@
     </div>
 
 
-    <div class="panel-footer">
-        <a href="/Follow/Create" class="btn btn-primary btn-block">
-            Create New Follow
-        </a>
-    </div>
-
 </div>
+
+@section Scripts {
+    @Scripts.Render("~/bundles/jqueryval")
+}
 
